# cbt

./: .gitignore  Cargo.toml  README.md  cbt.toml
example/src/: test.c  test2.c  test2.h
src/: cli.rs  commands.rs  compilation.rs  config.rs  files.rs  logging.rs  main.rs  util.rs
